--- a/client/src/styles/activity.css
+++ b/client/src/styles/activity.css
@@ -4,7 +4,7 @@
 .activity-list {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 60%;
     height: max-content;
 }
 .activity {
@@ -68,4 +68,20 @@
 .activity-card .price .currency-price {
     font-size: 13px;
     opacity: .5;
+}
+/* RESPONSIVE */
+@media screen and (max-width: 1400px) {
+    .activity-list {
+        width: 70%;
+    }
+}
+@media screen and (max-width: 900px) {
+    .activity-list {
+        width: 80%;
+    }
+}
+@media screen and (max-width: 600px) {
+    .activity-list {
+        width: 80%;
+    }
 }
