--- a/client/src/styles/issueReport.css
+++ b/client/src/styles/issueReport.css
@@ -21,3 +21,16 @@
     bottom: -27px;
     left: 0;
 }
+/* RESPONSIVE */
+@media screen and (max-width: 1000px) {
+    .issue-report-component {
+        width: 70% !important;
+        padding: 0 15%;
+    }
+}
+@media screen and (max-width: 600px) {
+    .issue-report-component {
+        width: 90% !important;
+        padding: 0 5%;
+    }
+}
