--- a/client/src/styles/mainComponent.css
+++ b/client/src/styles/mainComponent.css
@@ -7,5 +7,5 @@
     height: 100%;
     height: -webkit-fill-available;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
 }
