--- a/client/src/styles/wallet.css
+++ b/client/src/styles/wallet.css
@@ -5,11 +5,14 @@
     justify-content: flex-start !important;
 }
 .wallet-component .crypto-list {
-    width: calc(100% - 20px);
-    margin: 0 10px;
-    display: flex;
-    flex-wrap: wrap;
-    height: max-content;
+    width: calc(100% - 60px);
+    height: 70%;
+    margin: 0 30px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 200px);
+    grid-template-rows: repeat(auto-fill, 220px);
+    grid-gap: 30px;
+    justify-content: center;
 }
 .wallet-component .wallet-amount-container {
     display: flex;
@@ -17,8 +20,14 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 30vh;
+    height: 30%;
     line-height: 33px;
+}
+.wallet-component .wallet-amount-container .wallet-amount {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .wallet-component .wallet-amount .total-balance {
     font-size: 14px;
@@ -37,7 +46,6 @@
     align-items: center;
     justify-content: space-around;
     padding: 10px 25px;
-    margin: 10px;
     border-radius: 15px;
     box-shadow: var(--box-shadow);
 }
