--- a/client/src/styles/pageNotFound.css
+++ b/client/src/styles/pageNotFound.css
@@ -49,3 +49,10 @@
     padding: 10px 15px;
     border-radius: 10px;
 }
+
+/* RESPONSIVE */
+@media screen and (max-width: 1100px) {
+    .page-not-found-container .bg-container {
+        display: none;
+    }
+}
