--- a/client/src/styles/pageNotFound.css
+++ b/client/src/styles/pageNotFound.css
@@ -7,6 +7,7 @@
     background-color: var(--bg-color);
     justify-content: center;
     align-items: center;
+    z-index: +1;
 }
 .bg-container {
     width: 80%;
