--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -23,3 +23,10 @@ a {
   flex-shrink: 100;
   height: 100vh;
 }
+
+/* RESPONSIVE */
+@media screen and (max-width: 800px) {
+    .header-and-main-component-container {
+        height: calc(100vh - 70px);
+    }
+}
