--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -10,6 +10,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    z-index: +1;
 }
 
 /* RESPONSIVE */
