--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -46,6 +46,7 @@
 .crypto-card img {
     width: 30px;
     margin-right: 15px;
+    border-radius: 50%;
 }
 .crypto-card .crypto-base {
     font-size: 12px;
@@ -359,6 +360,11 @@ form button {
         margin-top: 60px;
     }
 }
-@media screen and (max-width: 600px) {
-
+@media screen and (max-width: 470px) {
+    .home-component .buy-and-sell-form-container .wrapper, .home-component .crypto-list {
+        width: 95%;
+    }
+    .first-connection-msg-component .container {
+        padding: 10px;
+    }
 }
