--- a/client/src/styles/issueReport.css
+++ b/client/src/styles/issueReport.css
@@ -34,3 +34,9 @@
         padding: 0 10%;
     }
 }
+@media screen and (max-width: 400px) {
+    .issue-report-component {
+        width: 90% !important;
+        padding: 0 5%;
+    }
+}
