--- a/client/src/styles/resetPassword.css
+++ b/client/src/styles/resetPassword.css
@@ -10,3 +10,10 @@
     align-items: center;
     z-index: +1;
 }
+
+@media screen and (max-width: 440px) {
+    .reset-password-component .form-container {
+        width: 100%;
+        padding: 30px;
+    }
+}
