--- a/client/src/styles/activity.css
+++ b/client/src/styles/activity.css
@@ -36,6 +36,7 @@
     opacity: .2;
 }
 .activity-list .date {
+    width: fit-content;
     padding-bottom: 10px;
     padding-top: 15px;
     margin-bottom: -30px;
