--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -25,3 +25,18 @@
         padding: 20px ;
     }
 }
+@media screen and (max-width: 440px) {
+    .login-component .guest-container {
+        width: 95%;
+    }
+    .login-component .guest-container .guest-button {
+        width: 100%;
+    }
+    .login-component .form-container {
+        padding: 25px;
+        width: calc(95% - 50px);
+    }
+    .login-component .form-bottom-link {
+        width: 100%;
+    }
+}
