--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -211,6 +211,7 @@ input[type=number] {
 .selected img, .option-list img {
     width: 30px;
     margin-right: 15px;
+    border-radius: 50%;
 }
 .option .crypto-name-container {
     display: flex;
