--- a/client/src/styles/wallet.css
+++ b/client/src/styles/wallet.css
@@ -56,6 +56,7 @@
 .crypto .crypto-data img {
     width: 37px;
     margin-right: 10px;
+    border-radius: 50%;
 }
 .crypto .prices {
     text-align: center;
