--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -6,10 +6,6 @@
     left: 0;
     align-items: center;
     background-color: var(--bg-color);
-    background-image: url('../img/1.svg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     z-index: +1;
 }
 
@@ -18,6 +14,7 @@
     .main-component-container .login-component {
         flex-direction: column;
         justify-content: center;
+        z-index: +3;
     }
     .login-component .guest-button {
         width: 400px;
